[tool.poetry]
name = "starter-setup"
version = "0.1.0"
description = ""
authors = ["Aline Silveira <aline@outlook.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
